@@ -339,10 +339,19 @@
 
  4.8 Option SB
 
- Option SB was supposed to help Creative's SoundBlaster emulation drivers for
- SB PCI devices. It translates an exception 0Dh with error code 0x1A that
- may have occured in V86 mode to an INT 3. That's rather obscure and most
- likely was just a misunderstanding.
+ Option SB is supposed to help Creative's SoundBlaster emulation drivers for
+ SB PCI devices. It does 2 things:
+
+ a) It translates an exception 0Dh with error code 0x1A that may have occured
+    in V86 mode to an INT 3. It's unclear what this is supposed to fix.
+ b) Since v5.86, it "identity maps" region 0-0x3fffff in the first page table
+    and includes the monitor code into the shared address space returned by
+    VCPI function 01.
+
+ With b), Creative's SBINIT/SBEINIT tools should be compatible with Jemm.
+ However, due to the rather hackish nature of those drivers ( they modify
+ Jemm's IDT/GDT and page tables), one may experience negative effects on
+ stability.
 
 
  5. Compatibility
@@ -364,10 +373,11 @@
    addresses and sizes are stored in a table in extended memory, not accessible
    by external programs. The table can hold up to 8 blocks.
 </LI>
-<LI> - MS Emm386 tries to map physical memory in its linear address space, in such
-   a way that linear and physical addresses are identical. This isn't done by
-   Jemm, because it may consume quite a lot of physical memory for paging
+<LI> - MS Emm386 tries to map all of physical memory in its linear address space,
+   in such a way that linear and physical addresses are identical. This isn't
+   done by Jemm, because it may consume quite a lot of physical memory for paging
    tables - at least if 4KB pages are used, as it is the case with MS Emm386.
+   See option SB, though, which triggers this kind of mapping for the first 4 MB.
 </LI>
 <LI> - Both Jemm and MS Emm386 supply the NOVCPI commandline option. However, the
    effects differ: with Jemm, VCPI function DE01h will be deactivated by this
